[Home]

Summary:ASTERISK-25292: Testuite: tests/apps/bridge/bridge_wait/bridge_wait_e_options fails
Reporter:Kevin Harwell (kharwell)Labels:
Date Opened:2015-07-29 10:42:58Date Closed:2015-07-30 16:57:35
Priority:TrivialRegression?No
Status:Closed/CompleteComponents:Tests/testsuite
Versions:Frequency of
Occurrence
Constant
Related
Issues:
Environment:Attachments:
Description:After a change to Asterisk that made it so a local channel would no longer switch into a RINGING state after being "up", but instead generate the ringing tones the AsteriskTestSuite tests/apps/bridge/bridge_wait/bridge_wait_e_options test started to fail.

This is happening because the test expects the local channel to be put into a RINGING state. Fix the test to no longer depend on that state change and somehow check to make sure the local channel stays in the "up" state but is generating ringing.
Comments: